<resources>
    val resolved = 0;
    val unresolved = 0;
    <!--App name-->
    <string name="app_name">Ayos_App</string>

    <!-- Home page texts -->
    <string name="community_issue_text">
        Encountered an issue within the community? <font color='#3C693D'>Let us know</font>.
    </string>
    <string name="resolved_perc">0% Resolved Issue</string>
    <string name="unresolved_perc">0% Unresolved Issue</string>
    <string name="pending_reports">0 Total Pending Reports</string>
    <string name="report_desc">Pothole</string>
    <string name="report_date">September 17</string>
    <string name="location">Bakakeng Sur</string>
    <string name="report">Report</string>
    <string name="dashboard">Dashboard</string>

    <!-- button descriptions -->
    <string name="profile_button_description">Profile</string>
    <string name="home_button_description">Home</string>
    <string name="report_list_button_description">Report List</string>
    <string name="location_icon_description">Location-Icon</string>

    <string name="report_title">Report Status</string>
</resources>
