<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#4CAF50"
    android:orientation="vertical">


    <TextView
        android:id="@+id/dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundTint="#4B954F"
        android:text="@string/dashboard"
        android:textColor="#4B954E"
        android:textColorLink="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/dashboard_location"
        android:layout_width="161dp"
        android:layout_height="20dp"
        android:layout_marginTop="1dp"
        android:text="@string/location"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/icon_1_location"
        android:layout_width="22dp"
        android:layout_height="20dp"
        android:contentDescription="@string/location_icon_description"
        android:foregroundTint="#D3C8C8"
        android:src="@drawable/icon_1_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="305dp"
        android:layout_height="304dp"
        android:background="#EDE9E9"
        android:foregroundTint="#42C549"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <TextView
        android:id="@+id/issue_text"
        android:layout_width="259dp"
        android:layout_height="44dp"
        android:text="@string/community_issue_text"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <Button
        android:id="@+id/report_button"
        android:layout_width="99dp"
        android:layout_height="48dp"
        android:backgroundTint="#D2E4D4"
        android:foregroundTint="#D5D1D1"
        android:text="@string/report"
        android:textColor="#525151"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issue_text"
        app:layout_constraintVertical_bias="0.037" />

    <ImageButton
        android:id="@+id/profile_button"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:contentDescription="@string/profile_button_description"
        android:src="@drawable/icons8_profile_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/home_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <ImageButton
        android:id="@+id/home_button"
        android:contentDescription="@string/home_button_description"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:src="@drawable/icons8_home_26"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <ImageButton
        android:id="@+id/report_list_button"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:contentDescription="@string/report_list_button_description"
        android:src="@drawable/icons8_document_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/home_button"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

</androidx.constraintlayout.widget.ConstraintLayout>