<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#A9A7A7"
    android:foregroundTint="#4CAF50"
    android:orientation="vertical">


    <TextView
        android:id="@+id/dashboard2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundTint="#4B954F"
        android:text="@string/pending_reports"
        android:textColor="#4B954E"
        android:textColorLink="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        app:layout_constraintVertical_bias="0.703" />

    <TextView
        android:id="@+id/dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundTint="#4B954F"
        android:text="@string/dashboard"
        android:textColor="#4B954E"
        android:textColorLink="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <TextView
        android:id="@+id/dashboard_location"
        android:layout_width="290dp"
        android:layout_height="20dp"
        android:layout_marginTop="1dp"
        android:text="@string/location"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/icon_1_location"
        app:layout_constraintTop_toBottomOf="@+id/dashboard"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/icon_1_location"
        android:layout_width="22dp"
        android:layout_height="20dp"
        android:contentDescription="@string/location_icon_description"
        android:foregroundTint="#D3C8C8"
        android:src="@drawable/icon_1_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard"
        app:layout_constraintVertical_bias="0.003"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="313dp"
        android:layout_height="310dp"
        android:background="@drawable/rectangle_bg"
        android:foregroundTint="#42C549"
        android:indeterminateTint="#3C693D"
        android:paddingBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <ImageButton
        android:id="@+id/profile_button"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:contentDescription="@string/profile_button_description"
        android:src="@drawable/icons8_profile_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/home_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:contentDescription="@string/home_button_description"
        android:src="@drawable/icons8_home_26"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <ImageButton
        android:id="@+id/report_list_button"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:contentDescription="@string/report_list_button_description"
        android:src="@drawable/icons8_document_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/home_button"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <TextView
        android:id="@+id/resolved_percentage"
        android:layout_width="145dp"
        android:layout_height="19dp"
        android:layout_marginTop="256dp"
        android:text="@string/resolved_perc"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar" />

    <TextView
        android:id="@+id/unresolved_percentage"
        android:layout_width="145dp"
        android:layout_height="19dp"
        android:text="@string/unresolved_perc"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toBottomOf="@+id/resolved_percentage"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view"
        android:layout_width="321dp"
        android:layout_height="136dp"
        android:background="@drawable/rectangle_bg"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="486dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_date"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.47" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icons8_menu_vertical_24__1_"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.23" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:src="@drawable/icons8_image_placeholder_50"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.144" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="206dp"
        android:layout_height="26dp"
        android:layout_marginTop="12dp"
        android:text="@string/report_desc"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/imageView21" />

</androidx.constraintlayout.widget.ConstraintLayout>