<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#A9A7A7"
    android:foregroundTint="#4CAF50"
    android:orientation="vertical">


    <TextView
        android:id="@+id/reportTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundTint="#4B954F"
        android:text="@string/report_title"
        android:textColor="#4B954E"
        android:textColorLink="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:contentDescription="@string/profile_button_description"
        android:src="@drawable/icons8_profile_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:contentDescription="@string/home_button_description"
        android:src="@drawable/icons8_home_26"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <ImageButton
        android:id="@+id/reportListButton"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:contentDescription="@string/report_list_button_description"
        android:src="@drawable/icons8_document_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/homeButton"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="320dp"
        android:layout_height="150dp"
        android:src="@drawable/rectangle_bg"
        app:layout_constraintBottom_toTopOf="@+id/homeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
        app:layout_constraintVertical_bias="0.428" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="none">

    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reportTitle">

        <!-- First button (green) -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/green"
            android:text="Submitted"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/gray"
            android:text="Under Review"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/gray"
            android:text="In Progress"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="77dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/gray"
            android:text="Completed"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:background="@drawable/green"
        android:text="Submitted"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.511" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:background="@drawable/gray_mainstat"
        android:text="View"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/ovalButton"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.549" />

    <Button
        android:id="@+id/ovalButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:background="@drawable/gray_mainstat"
        android:padding="8dp"
        android:text="Delete"
        android:textAllCaps="false"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.859" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Damaged Road"
        android:textColor="@color/black"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        tools:layout_editor_absoluteX="23dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:text="September 19,2025"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toStartOf="@+id/ovalButton"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.885" />


</androidx.constraintlayout.widget.ConstraintLayout>